--- a/static/styles.css
+++ b/static/styles.css
@@ -170,7 +170,7 @@ ul {
 }
 
 li {
-    background: slategrey;
+    background: lightgrey;
     margin: 5px 0;
     padding: 10px;
     border-radius: 5px;
