--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,6 @@
       <ul id="recommendationsNoXAI"></ul>
     </div>
     <div id="lime" class="tab-content" style="display:none;">
-      <h2>LIME Explanation</h2>
       <p style="color: red;"> Please allow a few moments for the explanations to load.</p>
       <input type="text" id="bookTitleLime" placeholder="Enter a book title">
       <div class="toggle-label">
@@ -49,8 +48,9 @@
       </div>
     </div>
     <div id="anchor" class="tab-content" style="display:none;">
-      <h2>Anchor Explanation</h2>
-      <p style="color: red;"> Please allow a few moments for the explanations to load. It can take a while. This is normal. An error message will appear if the explanations fail to load.</p>
+      <p style="color: red;"> Please allow a few moments for the explanations to load.<br> 
+        It can take a while. This is normal. <br>
+        An error message will appear if the explanations fail to load.</p>
       <input type="text" id="bookTitleAnchor" placeholder="Enter a book title">
       <div class="toggle-label">
         <input type="checkbox" id="includeSameAuthorAnchor" checked>
